# LazyGL

./: meson.build
